--- a/Podstrona-4/index.html
+++ b/Podstrona-4/index.html
@@ -344,7 +344,6 @@
           <div class="container-medium container-on-bg">
             <div class="padding-section-medium">
               <div class="linkpage-content">
-                <div class="linkpage_image-wrap"><img sizes="100vw" srcset="images/intimate-portrait-of-a-couple-9kxvs-p-500.jpeg 500w, images/intimate-portrait-of-a-couple-9kxvs-p-800.jpeg 800w, images/intimate-portrait-of-a-couple-9kxvs-p-1080.jpeg 1080w, images/intimate-portrait-of-a-couple-9kxvs.jpeg 1240w" alt="" src="images/intimate-portrait-of-a-couple-9kxvs.jpeg" loading="lazy" class="linkpage_profile-image"></div>
                 <h2 class="heading-style-h4 text-color-white">Ewa i Tomek</h2>
                 <div class="margin-xsmall margin-top">
                   <p class="text-size-regular-10 text-color-white">Skontaktuj się z nami w prosty sposób</p>
@@ -431,16 +430,16 @@
                         <div class="gallery-grid-wrap">
                           <div class="gallery_03-grid">
                             <div class="grid-content hero-anim-load-1st">
-                              <div class="gallery_image-wrap"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e00442fc2ff81b69b25c0_About%201.avif" alt="" class="gallery_image"></div>
+                              <div class="gallery_image-wrap"><img loading="lazy" src="/Podstrona-4/images/gothic-cathedral-and-scenic-water-reflection-eh8im-p-500.png" alt="" class="gallery_image"></div>
                             </div>
                             <div class="grid-content hero-anim-load-2nd">
-                              <div class="gallery_image-wrap"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e0046a8811089f620b6d3_About%202.avif" alt="" class="gallery_image"></div>
+                              <div class="gallery_image-wrap"><img loading="lazy" src="/Podstrona-4/images/solitary-explorer-studying-map-outdoors-ptswg-p-500.png" alt="" class="gallery_image"></div>
                             </div>
                             <div class="grid-content hero-anim-load-3rd">
-                              <div class="gallery_image-wrap"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e004233800dda2ee742f6_About%203.jpg" alt="" class="gallery_image"></div>
+                              <div class="gallery_image-wrap"><img loading="lazy" src="/Podstrona-4/images/world-map-tote-bag-vfjrg-p-500.png" alt="" class="gallery_image"></div>
                             </div>
                             <div class="grid-content hero-anim-load-4th">
-                              <div class="gallery_image-wrap"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e004204df989648f96f93_About%204.avif" alt="" class="gallery_image"></div>
+                              <div class="gallery_image-wrap"><img loading="lazy" src="/Podstrona-4/images/bustling-urban-winter-scene-pYgB3-p-500.png" alt="" class="gallery_image"></div>
                             </div>
                           </div>
                         </div>
@@ -493,7 +492,7 @@
             </div>
           </div>
         </div>
-        <div class="linkapage-bg"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e00442fc2ff81b69b25c0_About%201.avif" alt="" class="linkpage_bg-image">
+        <div class="linkapage-bg"><img loading="lazy" src="/Podstrona-4/images/intimate-portrait-of-a-couple-9kxvs-p-1080.jpeg" alt="" class="linkpage_bg-image">
           <div class="linkpage_bg-overlay"></div>
         </div>
       </div>
