--- a/Podstrona-2/index.html
+++ b/Podstrona-2/index.html
@@ -144,7 +144,7 @@
                 <div class="hero-anim-load-4th">
                   <div class="blog_10-list">
                     <a href="#" class="blog_10-link w-inline-block">
-                      <div class="blog_10-image-wrap hero-anim-load-1-opacity"><img loading="lazy" src="/Podstrona-2/images/a-backpacker-touristing-into-high-risky-mountains-pho-.png" alt="" class="blog_image blog-image-absolute-100">
+                      <div class="blog_10-image-wrap hero-anim-load-1-opacity"><img loading="lazy" src="/Podstrona-2/images/travelers-corkboard-world-map-with-photographs-mW35K.png" alt="" class="blog_image blog-image-absolute-100">
                         <div class="blog_overlay"></div>
                       </div>
                       <div id="w-node-df00a696-0a28-1d67-ceef-6deb5cdc9b1e-1dd84cf4" class="blog_10-content">
@@ -191,7 +191,7 @@
                     <div class="bento-grid-normal">
                       <div class="bento-grid-normal-img-wrap">
                         <div class="bento-grid-card-1-img-holder">
-                          <div class="bento-mask-bottom"><img loading="lazy" src="/Podstrona-2/images/a-backpacker-touristing-into-high-risky-mountains-pho-.png" alt="" class="bento-grid-wide-img"></div>
+                          <div class="bento-mask-bottom"><img loading="lazy" src="/Podstrona-2/images/travelers-corkboard-world-map-with-photographs-mW35K.png.png" alt="" class="bento-grid-wide-img"></div>
                         </div>
                       </div>
                       <div class="bento-card-content">
@@ -538,12 +538,12 @@
                               <script type="application/json" class="w-json">{
   "items": [
     {
-      "_id": "example_img",
-      "origFileName": "image-placeholder.svg",
-      "fileName": "image-placeholder.svg",
+      "_id": "ai-ntk3tufuma.png",
+      "origFileName": "ai-ntk3tufuma.png",
+      "fileName": "ai-ntk3tufuma.png",
       "fileSize": 2063,
       "height": 150,
-      "url": "https://d3e54v103j8qbb.cloudfront.net/img/image-placeholder.svg",
+      "url": "/Podstrona-2/images/ai-ntk3tufuma.png",
       "width": 150,
       "type": "image"
     }
@@ -645,7 +645,7 @@
                   </div>
                 </div>
                 <div class="grid-content">
-                  <div data-w-id="df00a696-0a28-1d67-ceef-6deb5cdc9c87" class="features-image-wrap"><img style="-webkit-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" loading="lazy" alt="" src="/Podstrona-2/images/ai-4h7egrwo9ay.png" class="features-image">
+                  <div data-w-id="df00a696-0a28-1d67-ceef-6deb5cdc9c87" class="features-image-wrap"><img style="-webkit-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" loading="lazy" alt="" src="/Podstrona-2/images/ai-ntk3tufuma.png" class="features-image">
                     <div class="hero_play-icon">
                       <a href="#" data-w-id="df00a696-0a28-1d67-ceef-6deb5cdc9c8a" class="play-icon-lightbox w-inline-block w-lightbox">
                         <div class="play_icon-holder"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewbox="0 0 24 24" fill="none" app="ikonik" class="play-icon">
@@ -835,7 +835,7 @@
             </div>
             <div id="w-node-df00a696-0a28-1d67-ceef-6deb5cdc9d0a-1dd84cf4" class="grid-content hero-anim-load-4th">
               <div class="gallery_while-scrolling-image">
-                <div class="gallery_image-wrap"><img loading="lazy" src="/images/travelers-corkboard-world-map-with-photographs-mW35K.png" alt="" class="gallery_image"></div>
+                <div class="gallery_image-wrap"><img loading="lazy" src="/images/Gemini_Generated_Image_ejjss9ejjss9ejjs (1).png" alt="" class="gallery_image"></div>
                      </div>
       </div>
     </div>
