--- a/Podstrona-2/index.html
+++ b/Podstrona-2/index.html
@@ -191,7 +191,7 @@
                     <div class="bento-grid-normal">
                       <div class="bento-grid-normal-img-wrap">
                         <div class="bento-grid-card-1-img-holder">
-                          <div class="bento-mask-bottom"><img loading="lazy" src="/images/travelers-corkboard-world-map-with-photographs-mW35K.png.png" alt="" class="bento-grid-wide-img"></div>
+                          <div class="bento-mask-bottom"><img loading="lazy" src="/Podstrona-2/images/travelers-corkboard-world-map-with-photographs-mW35K.png" alt="" class="bento-grid-wide-img"></div>
                         </div>
                       </div>
                       <div class="bento-card-content">
