--- a/Podstrona-2/index.html
+++ b/Podstrona-2/index.html
@@ -511,7 +511,7 @@
                     </div>
                   </div>
                   <div class="grid-content">
-                    <div data-w-id="df00a696-0a28-1d67-ceef-6deb5cdc9c33" class="features-image-wrap"><img style="-webkit-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" loading="lazy" alt="" src="/Podstrona-2/images/ai-ntk3tufuma.png" class="features-image" />
+                    <div data-w-id="df00a696-0a28-1d67-ceef-6deb5cdc9c33" class="features-image-wrap"><img style="-webkit-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" loading="lazy" alt="" src="/Podstrona-2/images/ai-ntk3tufuma.png" class="features-image">
                       <div class="features-image-bg"></div>
                       <div class="play-lightbox-2">
                         <div class="lightbox-2-wrap">
@@ -645,7 +645,7 @@
                   </div>
                 </div>
                 <div class="grid-content">
-                  <div data-w-id="df00a696-0a28-1d67-ceef-6deb5cdc9c87" class="features-image-wrap"><img style="-webkit-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" loading="lazy" alt="" src="/Podstrona-2/images/ai-ntk3tufuma.png" class="features-image" />
+                  <div data-w-id="df00a696-0a28-1d67-ceef-6deb5cdc9c87" class="features-image-wrap"><img style="-webkit-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 0, 0) scale3d(1.1, 1.1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" loading="lazy" alt="" src="/Podstrona-2/images/ai-ntk3tufuma-p-500.png" class="features-image">
                     <div class="hero_play-icon">
                       <a href="#" data-w-id="df00a696-0a28-1d67-ceef-6deb5cdc9c8a" class="play-icon-lightbox w-inline-block w-lightbox">
                         <div class="play_icon-holder"><svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewbox="0 0 24 24" fill="none" app="ikonik" class="play-icon">
