--- a/Podstrona-2/index.html
+++ b/Podstrona-2/index.html
@@ -526,39 +526,61 @@
                                         </svg></div>
                                     </div>
                                     <div>
-<div class="lightbox-2">
-  <a href="#" class="lightbox-link w-inline-block w-lightbox">
-    <div class="card">
-      <div class="card-content">
-        <div class="opacity-70pct">
-          <p class="text-size-small">02:54</p>
-        </div>
-        <p class="text-size-small">Zobacz demo</p>
-      </div>
-      <div class="card-bg"></div>
-    </div>
+										<div class="opacity-70pct">
 
-    <script type="application/json" class="w-json">
+                                        <p class="text-size-small">02:54</p>
+
+                                      </div>
+
+                                      <p class="text-size-small">Zobacz demo</p>
+
+                                    </div>
+
+                                  </div>
+
+                                  <div class="card-bg"></div>
+
+                                </div>
+
+                              </div>
+
+                              <script type="application/json" class="w-json">{
+
+  "items": [
+
     {
-      "items": [
-        {
-          "_id": "ai-ntk3tufuma.png",
-          "origFileName": "ai-ntk3tufuma.png",
-          "fileName": "ai-ntk3tufuma.png",
-          "fileSize": 2063,
-          "height": 150,
-          "url": "/Podstrona-2/images/ai-ntk3tufuma.png",
-          "width": 150,
-          "type": "image"
-        }
-      ],
-      "group": ""
-    }
-    </script>
-  </a>
 
-  <div class="lightbox-2-overlay"></div>
-</div>
+      "_id": "ai-ntk3tufuma.png",
+
+      "origFileName": "ai-ntk3tufuma.png",
+
+      "fileName": "ai-ntk3tufuma.png",
+
+      "fileSize": 2063,
+
+      "height": 150,
+
+      "url": "/Podstrona-2/images/ai-ntk3tufuma.png",
+
+      "width": 150,
+
+      "type": "image"
+
+    }
+
+  ],
+
+  "group": ""
+
+}</script>
+
+                            </a>
+
+                          </div>
+
+                          <div class="lightbox-2-overlay"></div>
+
+                        </div>
 
                       </div>
 
