--- a/index.html
+++ b/index.html
@@ -351,16 +351,16 @@
                   <div class="gallery-grid-wrap">
                     <div class="gallery_04-grid">
                       <div class="grid-content hero-anim-load-1st">
-                        <div class="gallery_image-wrap aspect-ratio-landscape"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e00442fc2ff81b69b25c0_About%201.avif" alt="" class="gallery_image"></div>
+                        <div class="gallery_image-wrap aspect-ratio-landscape"><img loading="lazy" src="images/hiker-in-scenic-nature-ao2xj-p-500.jpeg 500w, images/hiker-in-scenic-nature-ao2xj-p-800.jpeg 800w, images/hiker-in-scenic-nature-ao2xj.jpeg 938w" alt="" class="gallery_image"></div>
                       </div>
                       <div class="grid-content hero-anim-load-2nd">
-                        <div class="gallery_image-wrap aspect-ratio-landscape"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e0046a8811089f620b6d3_About%202.avif" alt="" class="gallery_image"></div>
+                        <div class="gallery_image-wrap aspect-ratio-landscape"><img loading="lazy" src="images/cyclist-at-sunrise-mg3sq-p-500.png 500w, images/cyclist-at-sunrise-mg3sq-p-800.png 800w, images/cyclist-at-sunrise-mg3sq.png 1000w" alt="" class="gallery_image"></div>
                       </div>
                       <div class="grid-content hero-anim-load-3rd">
-                        <div class="gallery_image-wrap aspect-ratio-landscape"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e004233800dda2ee742f6_About%203.jpg" alt="" class="gallery_image"></div>
+                        <div class="gallery_image-wrap aspect-ratio-landscape"><img loading="lazy" src="images/vintage-wheeled-suitcase-with-travel-stickers-UCZX6-p-500.png 500w, images/vintage-wheeled-suitcase-with-travel-stickers-UCZX6-p-800.png 800w, images/vintage-wheeled-suitcase-with-travel-stickers-UCZX6.png 999w" alt="" class="gallery_image"></div>
                       </div>
                       <div class="grid-content hero-anim-load-4th">
-                        <div class="gallery_image-wrap aspect-ratio-landscape"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e004204df989648f96f93_About%204.avif" alt="" class="gallery_image"></div>
+                        <div class="gallery_image-wrap aspect-ratio-landscape"><img loading="lazy" src="images/hiker-in-grassy-landscape-cw2c5-p-500.png 500w, images/hiker-in-grassy-landscape-cw2c5-p-800.png 800w, images/hiker-in-grassy-landscape-cw2c5-p-1080.png 1080w, images/hiker-in-grassy-landscape-cw2c5.png 1240w" alt="" class="gallery_image"></div>
                       </div>
                     </div>
                   </div>
@@ -374,17 +374,17 @@
                     <div class="gallery-grid-wrap">
                       <div class="gallery_04-grid">
                         <div class="grid-content hero-anim-load-1st">
-                          <div class="gallery_image-wrap aspect-ratio-landscape"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e00442fc2ff81b69b25c0_About%201.avif" alt="" class="gallery_image"></div>
-                        </div>
-                        <div class="grid-content hero-anim-load-2nd">
-                          <div class="gallery_image-wrap aspect-ratio-landscape"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e0046a8811089f620b6d3_About%202.avif" alt="" class="gallery_image"></div>
-                        </div>
-                        <div class="grid-content hero-anim-load-3rd">
-                          <div class="gallery_image-wrap aspect-ratio-landscape"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e004233800dda2ee742f6_About%203.jpg" alt="" class="gallery_image"></div>
-                        </div>
-                        <div class="grid-content hero-anim-load-4th">
-                          <div class="gallery_image-wrap aspect-ratio-landscape"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e004204df989648f96f93_About%204.avif" alt="" class="gallery_image"></div>
-                        </div>
+						<div class="gallery_image-wrap aspect-ratio-landscape"><img loading="lazy" src="images/hiker-in-scenic-nature-ao2xj-p-500.jpeg 500w, images/hiker-in-scenic-nature-ao2xj-p-800.jpeg 800w, images/hiker-in-scenic-nature-ao2xj.jpeg 938w" alt="" class="gallery_image"></div>
+                      </div>
+                      <div class="grid-content hero-anim-load-2nd">
+                        <div class="gallery_image-wrap aspect-ratio-landscape"><img loading="lazy" src="images/cyclist-at-sunrise-mg3sq-p-500.png 500w, images/cyclist-at-sunrise-mg3sq-p-800.png 800w, images/cyclist-at-sunrise-mg3sq.png 1000w" alt="" class="gallery_image"></div>
+                      </div>
+                      <div class="grid-content hero-anim-load-3rd">
+                        <div class="gallery_image-wrap aspect-ratio-landscape"><img loading="lazy" src="images/vintage-wheeled-suitcase-with-travel-stickers-UCZX6-p-500.png 500w, images/vintage-wheeled-suitcase-with-travel-stickers-UCZX6-p-800.png 800w, images/vintage-wheeled-suitcase-with-travel-stickers-UCZX6.png 999w" alt="" class="gallery_image"></div>
+                      </div>
+                      <div class="grid-content hero-anim-load-4th">
+                        <div class="gallery_image-wrap aspect-ratio-landscape"><img loading="lazy" src="images/hiker-in-grassy-landscape-cw2c5-p-500.png 500w, images/hiker-in-grassy-landscape-cw2c5-p-800.png 800w, images/hiker-in-grassy-landscape-cw2c5-p-1080.png 1080w, images/hiker-in-grassy-landscape-cw2c5.png 1240w" alt="" class="gallery_image"></div>
+                      </div>
                       </div>
                     </div>
                   </div>
@@ -392,17 +392,17 @@
                     <div class="gallery-grid-wrap">
                       <div class="gallery_04-grid">
                         <div class="grid-content hero-anim-load-1st">
-                          <div class="gallery_image-wrap aspect-ratio-landscape"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e00442fc2ff81b69b25c0_About%201.avif" alt="" class="gallery_image"></div>
-                        </div>
-                        <div class="grid-content hero-anim-load-2nd">
-                          <div class="gallery_image-wrap aspect-ratio-landscape"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e0046a8811089f620b6d3_About%202.avif" alt="" class="gallery_image"></div>
-                        </div>
-                        <div class="grid-content hero-anim-load-3rd">
-                          <div class="gallery_image-wrap aspect-ratio-landscape"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e004233800dda2ee742f6_About%203.jpg" alt="" class="gallery_image"></div>
-                        </div>
-                        <div class="grid-content hero-anim-load-4th">
-                          <div class="gallery_image-wrap aspect-ratio-landscape"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e004204df989648f96f93_About%204.avif" alt="" class="gallery_image"></div>
-                        </div>
+						<div class="gallery_image-wrap aspect-ratio-landscape"><img loading="lazy" src="images/hiker-in-scenic-nature-ao2xj-p-500.jpeg 500w, images/hiker-in-scenic-nature-ao2xj-p-800.jpeg 800w, images/hiker-in-scenic-nature-ao2xj.jpeg 938w" alt="" class="gallery_image"></div>
+                      </div>
+                      <div class="grid-content hero-anim-load-2nd">
+                        <div class="gallery_image-wrap aspect-ratio-landscape"><img loading="lazy" src="images/cyclist-at-sunrise-mg3sq-p-500.png 500w, images/cyclist-at-sunrise-mg3sq-p-800.png 800w, images/cyclist-at-sunrise-mg3sq.png 1000w" alt="" class="gallery_image"></div>
+                      </div>
+                      <div class="grid-content hero-anim-load-3rd">
+                        <div class="gallery_image-wrap aspect-ratio-landscape"><img loading="lazy" src="images/vintage-wheeled-suitcase-with-travel-stickers-UCZX6-p-500.png 500w, images/vintage-wheeled-suitcase-with-travel-stickers-UCZX6-p-800.png 800w, images/vintage-wheeled-suitcase-with-travel-stickers-UCZX6.png 999w" alt="" class="gallery_image"></div>
+                      </div>
+                      <div class="grid-content hero-anim-load-4th">
+                        <div class="gallery_image-wrap aspect-ratio-landscape"><img loading="lazy" src="images/hiker-in-grassy-landscape-cw2c5-p-500.png 500w, images/hiker-in-grassy-landscape-cw2c5-p-800.png 800w, images/hiker-in-grassy-landscape-cw2c5-p-1080.png 1080w, images/hiker-in-grassy-landscape-cw2c5.png 1240w" alt="" class="gallery_image"></div>
+                      </div>
                       </div>
                     </div>
                   </div>
