--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                       <div class="blog_02-image-wrap"><img sizes="(max-width: 1500px) 100vw, 1500px" srcset="images/group-of-people-around-a-food-truck-on-a-street-co-6bf-p-500.png 500w, images/group-of-people-around-a-food-truck-on-a-street-co-6bf-p-800.png 800w, images/group-of-people-around-a-food-truck-on-a-street-co-6bf-p-1080.png 1080w, images/group-of-people-around-a-food-truck-on-a-street-co-6bf.png 1500w" alt="" src="images/group-of-people-around-a-food-truck-on-a-street-co-6bf.png" loading="lazy" class="blog_image"></div>
                       <div class="blog_02-content">
                         <p class="text-size-regular-7">Smaki Świata</p>
-                        <h2 class="heading-style-h4">Co i gdzie warto spróbować?</h2>
+                        <h2 class="heading-style-h4">Co i gdzie warto zjeść?</h2>
                         <div class="opacity-70pct">
                           <p class="text-size-small">Wrzesień 5</p>
                         </div>
@@ -392,7 +392,7 @@
                     <div class="gallery-grid-wrap">
                       <div class="gallery_04-grid">
                         <div class="grid-content hero-anim-load-1st">
-                       <div class="gallery_image-wrap aspect-ratio-landscape"><img sizes="(max-width: 938px) 100vw, 938px" srcset="images/hiker-in-scenic-nature-ao2xj-p-500.jpeg 500w, images/hiker-in-scenic-nature-ao2xj-p-800.jpeg 800w, images/hiker-in-scenic-nature-ao2xj.jpeg 938w" alt="" src="images/hiker-in-scenic-nature-ao2xj.jpeg" loading="lazy" class="gallery_image"></div>
+                       <div class="gallery_image-wrap aspect-ratio-landscape"><img sizes="(max-width: 938px) 100vw, 938px" srcset="images/a-backpacker-touristing-into-high-risky-mountains-pho-.png" alt="" src="images/hiker-in-scenic-nature-ao2xj.jpeg" loading="lazy" class="gallery_image"></div>
                       </div>
                       <div class="grid-content hero-anim-load-2nd">
                         <div class="gallery_image-wrap aspect-ratio-landscape"><img sizes="(max-width: 1000px) 100vw, 1000px" srcset="images/cyclist-at-sunrise-mg3sq-p-500.png 500w, images/cyclist-at-sunrise-mg3sq-p-800.png 800w, images/cyclist-at-sunrise-mg3sq.png 1000w" alt="" src="images/cyclist-at-sunrise-mg3sq.png" loading="lazy" class="gallery_image"></div>
