--- a/index.html
+++ b/index.html
@@ -351,16 +351,16 @@
                   <div class="gallery-grid-wrap">
                     <div class="gallery_04-grid">
                       <div class="grid-content hero-anim-load-1st">
-                       <div class="gallery_image-wrap aspect-ratio-landscape"><img sizes="(max-width: 938px) 100vw, 938px" srcset="images/hiker-in-scenic-nature-ao2xj-p-500.jpeg 500w, images/hiker-in-scenic-nature-ao2xj-p-800.jpeg 800w, images/hiker-in-scenic-nature-ao2xj.jpeg 938w" alt="" src="images/hiker-in-scenic-nature-ao2xj.jpeg" loading="lazy" class="gallery_image"></div>
+                       <div class="gallery_image-wrap aspect-ratio-landscape"><img sizes="(max-width: 938px) 100vw, 938px" srcset="images/a-backpacker-touristing-into-high-risky-mountains-pho-.png" alt="" src="images/hiker-in-scenic-nature-ao2xj.jpeg" loading="lazy" class="gallery_image"></div>
                       </div>
                       <div class="grid-content hero-anim-load-2nd">
-                        <div class="gallery_image-wrap aspect-ratio-landscape"><img sizes="(max-width: 1000px) 100vw, 1000px" srcset="images/cyclist-at-sunrise-mg3sq-p-500.png 500w, images/cyclist-at-sunrise-mg3sq-p-800.png 800w, images/cyclist-at-sunrise-mg3sq.png 1000w" alt="" src="images/cyclist-at-sunrise-mg3sq.png" loading="lazy" class="gallery_image"></div>
+                        <div class="gallery_image-wrap aspect-ratio-landscape"><img sizes="(max-width: 1000px) 100vw, 1000px" srcset="images/cobblestone-streets-with-stores-and-walking-t-077a8b0e.png" alt="" src="images/cyclist-at-sunrise-mg3sq.png" loading="lazy" class="gallery_image"></div>
                       </div>
                       <div class="grid-content hero-anim-load-3rd">
-                        <div class="gallery_image-wrap aspect-ratio-landscape"><img sizes="(max-width: 999px) 100vw, 999px" srcset="images/vintage-wheeled-suitcase-with-travel-stickers-UCZX6-p-500.png 500w, images/vintage-wheeled-suitcase-with-travel-stickers-UCZX6-p-800.png 800w, images/vintage-wheeled-suitcase-with-travel-stickers-UCZX6.png 999w" alt="" src="images/vintage-wheeled-suitcase-with-travel-stickers-UCZX6.png" loading="lazy" class="gallery_image"></div>
+                        <div class="gallery_image-wrap aspect-ratio-landscape"><img sizes="(max-width: 999px) 100vw, 999px" srcset="images/aztec-ruins-vacations-cinematic-realistic-national-ge-.png" alt="" src="images/vintage-wheeled-suitcase-with-travel-stickers-UCZX6.png" loading="lazy" class="gallery_image"></div>
                       </div>
                       <div class="grid-content hero-anim-load-4th">
-                        <div class="gallery_image-wrap aspect-ratio-landscape"><img sizes="(max-width: 1240px) 100vw, 1240px" srcset="images/hiker-in-grassy-landscape-cw2c5-p-500.png 500w, images/hiker-in-grassy-landscape-cw2c5-p-800.png 800w, images/hiker-in-grassy-landscape-cw2c5-p-1080.png 1080w, images/hiker-in-grassy-landscape-cw2c5.png 1240w" alt="" src="images/hiker-in-grassy-landscape-cw2c5.png" loading="lazy" class="gallery_image"></div>
+                        <div class="gallery_image-wrap aspect-ratio-landscape"><img sizes="(max-width: 1240px) 100vw, 1240px" srcset="images/a-group-of-young-people-sitting-on-a-roof-overlooking-.png" alt="" src="images/hiker-in-grassy-landscape-cw2c5.png" loading="lazy" class="gallery_image"></div>
                       </div>
                     </div>
                   </div>
@@ -374,16 +374,16 @@
                     <div class="gallery-grid-wrap">
                       <div class="gallery_04-grid">
                         <div class="grid-content hero-anim-load-1st">
-                       <div class="gallery_image-wrap aspect-ratio-landscape"><img sizes="(max-width: 938px) 100vw, 938px" srcset="images/hiker-in-scenic-nature-ao2xj-p-500.jpeg 500w, images/hiker-in-scenic-nature-ao2xj-p-800.jpeg 800w, images/hiker-in-scenic-nature-ao2xj.jpeg 938w" alt="" src="images/hiker-in-scenic-nature-ao2xj.jpeg" loading="lazy" class="gallery_image"></div>
+                       <div class="gallery_image-wrap aspect-ratio-landscape"><img sizes="(max-width: 938px) 100vw, 938px" srcset="images/a-backpacker-touristing-into-high-risky-mountains-pho-.png" alt="" src="images/hiker-in-scenic-nature-ao2xj.jpeg" loading="lazy" class="gallery_image"></div>
                       </div>
                       <div class="grid-content hero-anim-load-2nd">
-                        <div class="gallery_image-wrap aspect-ratio-landscape"><img sizes="(max-width: 1000px) 100vw, 1000px" srcset="images/cyclist-at-sunrise-mg3sq-p-500.png 500w, images/cyclist-at-sunrise-mg3sq-p-800.png 800w, images/cyclist-at-sunrise-mg3sq.png 1000w" alt="" src="images/cyclist-at-sunrise-mg3sq.png" loading="lazy" class="gallery_image"></div>
+                        <div class="gallery_image-wrap aspect-ratio-landscape"><img sizes="(max-width: 1000px) 100vw, 1000px" srcset="images/cobblestone-streets-with-stores-and-walking-t-077a8b0e.png" alt="" src="images/cyclist-at-sunrise-mg3sq.png" loading="lazy" class="gallery_image"></div>
                       </div>
                       <div class="grid-content hero-anim-load-3rd">
-                        <div class="gallery_image-wrap aspect-ratio-landscape"><img sizes="(max-width: 999px) 100vw, 999px" srcset="images/vintage-wheeled-suitcase-with-travel-stickers-UCZX6-p-500.png 500w, images/vintage-wheeled-suitcase-with-travel-stickers-UCZX6-p-800.png 800w, images/vintage-wheeled-suitcase-with-travel-stickers-UCZX6.png 999w" alt="" src="images/vintage-wheeled-suitcase-with-travel-stickers-UCZX6.png" loading="lazy" class="gallery_image"></div>
+                        <div class="gallery_image-wrap aspect-ratio-landscape"><img sizes="(max-width: 999px) 100vw, 999px" srcset="images/aztec-ruins-vacations-cinematic-realistic-national-ge-.png" alt="" src="images/vintage-wheeled-suitcase-with-travel-stickers-UCZX6.png" loading="lazy" class="gallery_image"></div>
                       </div>
                       <div class="grid-content hero-anim-load-4th">
-                        <div class="gallery_image-wrap aspect-ratio-landscape"><img sizes="(max-width: 1240px) 100vw, 1240px" srcset="images/hiker-in-grassy-landscape-cw2c5-p-500.png 500w, images/hiker-in-grassy-landscape-cw2c5-p-800.png 800w, images/hiker-in-grassy-landscape-cw2c5-p-1080.png 1080w, images/hiker-in-grassy-landscape-cw2c5.png 1240w" alt="" src="images/hiker-in-grassy-landscape-cw2c5.png" loading="lazy" class="gallery_image"></div>
+                        <div class="gallery_image-wrap aspect-ratio-landscape"><img sizes="(max-width: 1240px) 100vw, 1240px" srcset="images/a-group-of-young-people-sitting-on-a-roof-overlooking-.png" alt="" src="images/hiker-in-grassy-landscape-cw2c5.png" loading="lazy" class="gallery_image"></div>
                       </div>
                       </div>
                     </div>
@@ -401,7 +401,7 @@
                         <div class="gallery_image-wrap aspect-ratio-landscape"><img sizes="(max-width: 999px) 100vw, 999px" srcset="images/aztec-ruins-vacations-cinematic-realistic-national-ge-.png" alt="" src="images/vintage-wheeled-suitcase-with-travel-stickers-UCZX6.png" loading="lazy" class="gallery_image"></div>
                       </div>
                       <div class="grid-content hero-anim-load-4th">
-                        <div class="gallery_image-wrap aspect-ratio-landscape"><img sizes="(max-width: 1240px) 100vw, 1240px" srcset="images/cobblestone-streets-with-stores-and-walking-t-077a8b0e.png" alt="" src="images/hiker-in-grassy-landscape-cw2c5.png" loading="lazy" class="gallery_image"></div>
+                        <div class="gallery_image-wrap aspect-ratio-landscape"><img sizes="(max-width: 1240px) 100vw, 1240px" srcset="images/a-group-of-young-people-sitting-on-a-roof-overlooking-.png" alt="" src="images/hiker-in-grassy-landscape-cw2c5.png" loading="lazy" class="gallery_image"></div>
                       </div>
                       </div>
                     </div>
