--- a/Podstrona-3/index.html
+++ b/Podstrona-3/index.html
@@ -105,7 +105,7 @@
       <div class="blog_hero-09">
         <div data-w-id="36ad5110-d9dd-9405-bef4-faf056bf0abe" class="section-hero">
           <div class="blog_hero-09-item-wrap hero-anim-load-1-opacity">
-            <a href="#" class="blog_hero-09-link w-inline-block">
+            <a href="/Podstrona-3/" class="blog_hero-09-link w-inline-block">
               <div class="blog_hero-09-image-wrap"><img loading="lazy" src="/images/travel-memories-and-adventure-planning-vYfUg-p-1080.png" alt="" class="blog_image blog-image-absolute-100">
                 <div class="blog_hero-09-overlay"></div>
               </div>
