--- a/Podstrona-3/index.html
+++ b/Podstrona-3/index.html
@@ -105,7 +105,7 @@
       <div class="blog_hero-09">
         <div data-w-id="36ad5110-d9dd-9405-bef4-faf056bf0abe" class="section-hero">
           <div class="blog_hero-09-item-wrap hero-anim-load-1-opacity">
-            <a href="/Podstrona-3/" class="blog_hero-09-link w-inline-block">
+            <a href="/" class="blog_hero-09-link w-inline-block">
               <div class="blog_hero-09-image-wrap"><img loading="lazy" src="/images/travel-memories-and-adventure-planning-vYfUg-p-1080.png" alt="" class="blog_image blog-image-absolute-100">
                 <div class="blog_hero-09-overlay"></div>
               </div>
@@ -153,7 +153,7 @@
               <div class="padding-section-medium no-padding-top">
                 <div class="blog_hero-09-small">
                   <div style="opacity:0;-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="hero-anim-load-1st">
-                    <a data-w-id="36ad5110-d9dd-9405-bef4-faf056bf0ae3" href="#" class="blog_hero-09-small-link w-inline-block">
+                    <a data-w-id="36ad5110-d9dd-9405-bef4-faf056bf0ae3" href="/" class="blog_hero-09-small-link w-inline-block">
                       <div class="blog_hero-09-small-image-wrap"><img loading="lazy" src="/images/travelers-corkboard-world-map-with-photographs-mW35K-p-1080.png" alt="" class="blog_image blog-image-absolute-100">
                         <div class="blog_hero-09-small-overlay"></div>
                       </div>
@@ -187,7 +187,7 @@
                     </a>
                   </div>
                   <div style="opacity:0;-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="hero-anim-load-2nd">
-                    <a data-w-id="36ad5110-d9dd-9405-bef4-faf056bf0afd" href="#" class="blog_hero-09-small-link w-inline-block">
+                    <a data-w-id="36ad5110-d9dd-9405-bef4-faf056bf0afd" href="/" class="blog_hero-09-small-link w-inline-block">
                       <div class="blog_hero-09-small-image-wrap"><img loading="lazy" src="/images/Gemini_Generated_Image_4wfvfw4wfvfw4wfv.png" alt="" class="blog_image blog-image-absolute-100">
                         <div class="blog_hero-09-small-overlay"></div>
                       </div>
@@ -221,7 +221,7 @@
                     </a>
                   </div>
                   <div style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="hero-anim-load-3rd">
-                    <a data-w-id="36ad5110-d9dd-9405-bef4-faf056bf0b17" href="#" class="blog_hero-09-small-link w-inline-block">
+                    <a data-w-id="36ad5110-d9dd-9405-bef4-faf056bf0b17" href="/" class="blog_hero-09-small-link w-inline-block">
                       <div class="blog_hero-09-small-image-wrap"><img sizes="(max-width: 1500px) 100vw, 1500px" srcset="Podstrona-3/images/a-group-of-young-people-sitting-on-a-roof-overlooking--p-1080.png 1080w, Podstrona-3/images/a-group-of-young-people-sitting-on-a-roof-overlooking--p-800.png 800w, Podstrona-3/images/a-group-of-young-people-sitting-on-a-roof-overlooking--p-500.png 500w, Podstrona-3/images/a-group-of-young-people-sitting-on-a-roof-overlooking-.png 1500w" alt="" src="Podstrona-3/images/a-group-of-young-people-sitting-on-a-roof-overlooking-.png" loading="lazy" class="blog_image blog-image-absolute-100">
                         <div class="blog_hero-09-small-overlay"></div>
                       </div>
