--- a/Podstrona-3/index.html
+++ b/Podstrona-3/index.html
@@ -33,38 +33,38 @@
         <div class="nav-link-bg"></div>
       </a>
     </div>
-    <div class="nav-link-wrap-2">
-      <a href="/Podstrona-2/" class="nav-link w-inline-block">
-        <p class="text-simple">Inspiracje</p>
-        <div class="nav-link-bg"></div>
-      </a>
-    </div>
-    <div class="nav-link-wrap-2 flex-center">
-      <div>
-        <a href="/Podstrona-2/" class="nav-link w-inline-block">
-          <p class="text-simple">Podróże</p>
-          <div class="nav-badge">3</div>
-          <div class="nav-link-bg"></div>
-        </a>
-      </div>
-    </div>
-  </div>
-  <div class="nav_menu-right">
-    <div class="nav-link-wrap-2">
-      <a href="/Podstrona-3/" class="nav-link w-inline-block">
-        <p class="text-simple">Poradniki</p>
-        <div class="nav-link-bg"></div>
-      </a>
-    </div>
-    <div class="nav-link-wrap-2">
-      <a href="/Podstrona-1/" class="nav-link w-inline-block">
-        <p class="text-simple">Kim jesteśmy?</p>
-        <div class="nav-link-bg"></div>
-      </a>
-    </div>
-    <div class="nav_buttons-wrap">
-      <div>
-                    <a href="/Podstrona-4/" class="button w-inline-block">
+                <div class="nav-link-wrap-2">
+                  <a href="#" class="nav-link w-inline-block">
+                    <p class="text-simple">Inspiracje</p>
+                    <div class="nav-link-bg"></div>
+                  </a>
+                </div>
+                <div class="nav-link-wrap-2 flex-center">
+                  <div>
+                    <a href="#" target="_blank" class="nav-link w-inline-block">
+                      <p class="text-simple">Podróże</p>
+                      <div class="nav-badge">3</div>
+                      <div class="nav-link-bg"></div>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="nav_menu-right">
+                <div class="nav-link-wrap-2">
+                  <a href="#" class="nav-link w-inline-block">
+                    <p class="text-simple">Poradniki</p>
+                    <div class="nav-link-bg"></div>
+                  </a>
+                </div>
+                <div class="nav-link-wrap-2">
+                  <a href="#" class="nav-link w-inline-block">
+                    <p class="text-simple">Kim jesteśmy?</p>
+                    <div class="nav-link-bg"></div>
+                  </a>
+                </div>
+                <div class="nav_buttons-wrap">
+                  <div>
+                    <a href="#" class="button w-inline-block">
                       <p class="text-simple">Skontaktuj się!</p>
                       <div class="button-icon">
                         <div class="button-icon w-embed"><svg height="17" viewbox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg" class="button-icon">
@@ -105,8 +105,8 @@
       <div class="blog_hero-09">
         <div data-w-id="36ad5110-d9dd-9405-bef4-faf056bf0abe" class="section-hero">
           <div class="blog_hero-09-item-wrap hero-anim-load-1-opacity">
-			<a href="/Podstrona-3/" class="blog_item-link w-inline-block">
-              <div class="blog_hero-09-image-wrap"><img loading="lazy" src="/images/travel-memories-and-adventure-planning-vYfUg-p-1080.png" alt="" class="blog_image blog-image-absolute-100">
+            <a href="#" class="blog_hero-09-link w-inline-block">
+              <div class="blog_hero-09-image-wrap"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e0048399c091d1c9040ab_Blog%201.avif" alt="" class="blog_image blog-image-absolute-100">
                 <div class="blog_hero-09-overlay"></div>
               </div>
               <div class="padding-global">
@@ -134,7 +134,7 @@
                         <div class="blog_hero-09-author">
                           <div style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="hero-anim-load-4th">
                             <div class="author_small-info">
-                              <div class="author-img-wrap"><img sizes="(max-width: 818px) 100vw, 818px" srcset="Podstrona-3/images/portrait-of-a-distinguished-man-ixw7j-p-500.png 500w, Podstrona-3/images/portrait-of-a-distinguished-man-ixw7j-p-800.png 800w, Podstrona-3/images/portrait-of-a-distinguished-man-ixw7j.png 818w" alt="" src="Podstrona-3/images/portrait-of-a-distinguished-man-ixw7j.png" loading="lazy" class="author_image"></div>
+                              <div class="author-img-wrap"><img sizes="(max-width: 818px) 100vw, 818px" srcset="images/portrait-of-a-distinguished-man-ixw7j-p-500.png 500w, images/portrait-of-a-distinguished-man-ixw7j-p-800.png 800w, images/portrait-of-a-distinguished-man-ixw7j.png 818w" alt="" src="images/portrait-of-a-distinguished-man-ixw7j.png" loading="lazy" class="author_image"></div>
                               <div class="opacity-70pct">
                                 <p class="text-size-small text-color-white">Tomek</p>
                               </div>
@@ -153,8 +153,8 @@
               <div class="padding-section-medium no-padding-top">
                 <div class="blog_hero-09-small">
                   <div style="opacity:0;-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="hero-anim-load-1st">
-                    <a data-w-id="36ad5110-d9dd-9405-bef4-faf056bf0ae3" href="/Podstrona-3/" class="blog_hero-09-small-link w-inline-block">
-                      <div class="blog_hero-09-small-image-wrap"><img loading="lazy" src="/images/travelers-corkboard-world-map-with-photographs-mW35K-p-1080.png" alt="" class="blog_image blog-image-absolute-100">
+                    <a data-w-id="36ad5110-d9dd-9405-bef4-faf056bf0ae3" href="#" class="blog_hero-09-small-link w-inline-block">
+                      <div class="blog_hero-09-small-image-wrap"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e00488de2e97df82d11e6_Blog%206.avif" alt="" class="blog_image blog-image-absolute-100">
                         <div class="blog_hero-09-small-overlay"></div>
                       </div>
                       <div id="w-node-_36ad5110-d9dd-9405-bef4-faf056bf0ae7-43e8febe" class="blog_hero-09-small-main">
@@ -176,7 +176,7 @@
                         <div class="grid-content">
                           <div style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="hero-anim-load-4th">
                             <div class="author_small-info">
-                              <div class="author-img-wrap"><img loading="lazy" src="/images/person-avatar-1.svg" alt="" class="author_image"></div>
+                              <div class="author-img-wrap"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e00502fc2ff81b69b2c0a_Person%20img%202.avif" alt="" class="author_image"></div>
                               <div class="opacity-70pct">
                                 <p class="text-size-small text-color-white">Ewa</p>
                               </div>
@@ -187,8 +187,8 @@
                     </a>
                   </div>
                   <div style="opacity:0;-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="hero-anim-load-2nd">
-                    <a data-w-id="36ad5110-d9dd-9405-bef4-faf056bf0afd" href="/Podstrona-3/" class="blog_hero-09-small-link w-inline-block">
-                      <div class="blog_hero-09-small-image-wrap"><img loading="lazy" src="/images/Gemini_Generated_Image_4wfvfw4wfvfw4wfv.png" alt="" class="blog_image blog-image-absolute-100">
+                    <a data-w-id="36ad5110-d9dd-9405-bef4-faf056bf0afd" href="#" class="blog_hero-09-small-link w-inline-block">
+                      <div class="blog_hero-09-small-image-wrap"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e0047282902f13bc001d7_Blog%204.avif" alt="" class="blog_image blog-image-absolute-100">
                         <div class="blog_hero-09-small-overlay"></div>
                       </div>
                       <div id="w-node-_36ad5110-d9dd-9405-bef4-faf056bf0b01-43e8febe" class="blog_hero-09-small-main">
@@ -210,7 +210,7 @@
                         <div class="grid-content">
                           <div style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="hero-anim-load-4th">
                             <div class="author_small-info">
-                              <div class="author-img-wrap"><img loading="lazy" src="/images/person-avatar-1.svg" alt="" class="author_image"></div>
+                              <div class="author-img-wrap"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e00502fc2ff81b69b2c0a_Person%20img%202.avif" alt="" class="author_image"></div>
                               <div class="opacity-70pct">
                                 <p class="text-size-small text-color-white">Tomek</p>
                               </div>
@@ -221,8 +221,8 @@
                     </a>
                   </div>
                   <div style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="hero-anim-load-3rd">
-                    <a data-w-id="36ad5110-d9dd-9405-bef4-faf056bf0b17" href="/Podstrona-3/" class="blog_hero-09-small-link w-inline-block">
-                      <div class="blog_hero-09-small-image-wrap"><img sizes="(max-width: 1500px) 100vw, 1500px" srcset="Podstrona-3/images/a-group-of-young-people-sitting-on-a-roof-overlooking--p-1080.png 1080w, Podstrona-3/images/a-group-of-young-people-sitting-on-a-roof-overlooking--p-800.png 800w, Podstrona-3/images/a-group-of-young-people-sitting-on-a-roof-overlooking--p-500.png 500w, Podstrona-3/images/a-group-of-young-people-sitting-on-a-roof-overlooking-.png 1500w" alt="" src="Podstrona-3/images/a-group-of-young-people-sitting-on-a-roof-overlooking-.png" loading="lazy" class="blog_image blog-image-absolute-100">
+                    <a data-w-id="36ad5110-d9dd-9405-bef4-faf056bf0b17" href="#" class="blog_hero-09-small-link w-inline-block">
+                      <div class="blog_hero-09-small-image-wrap"><img sizes="(max-width: 1500px) 100vw, 1500px" srcset="images/a-group-of-young-people-sitting-on-a-roof-overlooking--p-500.png 500w, images/a-group-of-young-people-sitting-on-a-roof-overlooking--p-800.png 800w, images/a-group-of-young-people-sitting-on-a-roof-overlooking--p-1080.png 1080w, images/a-group-of-young-people-sitting-on-a-roof-overlooking-.png 1500w" alt="" src="images/a-group-of-young-people-sitting-on-a-roof-overlooking-.png" loading="lazy" class="blog_image blog-image-absolute-100">
                         <div class="blog_hero-09-small-overlay"></div>
                       </div>
                       <div id="w-node-_36ad5110-d9dd-9405-bef4-faf056bf0b1b-43e8febe" class="blog_hero-09-small-main">
@@ -244,7 +244,7 @@
                         <div class="grid-content">
                           <div style="-webkit-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 20px, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="hero-anim-load-4th">
                             <div class="author_small-info">
-                              <div class="author-img-wrap"><img loading="lazy" src="/images/person-avatar-1.svg" alt="" class="author_image"></div>
+                              <div class="author-img-wrap"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e00502fc2ff81b69b2c0a_Person%20img%202.avif" alt="" class="author_image"></div>
                               <div class="opacity-70pct">
                                 <p class="text-size-small text-color-white">Ewa</p>
                               </div>
@@ -262,7 +262,6 @@
       </div>
     </div>
   </div>
-  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=690488e24775922c43e8fe8e"></script>
-  <script src="/js/webflow.js"></script>
+  <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=690488e24775922c43e8fe8e" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+  <script src="js/webflow.js" type="text/javascript"></script>
 </body>
-</html>
