--- a/Podstrona-1/index.html
+++ b/Podstrona-1/index.html
@@ -20,7 +20,7 @@
         <div data-w-id="68a6d974-27c2-1b73-4cbb-5df1e7502dc6" data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="nav_04 w-nav">
           <div class="container-medium nav-container nav-04-container">
             <div class="nav_04-logo">
-              <a href="#" class="nav-logo-link w-nav-brand">
+              <a href="/" class="nav-logo-link w-nav-brand">
                 <div class="nav-logo-wrap">
                   <div class="logo-wrap"><img loading="lazy" src="https://cdn.prod.website-files.com/687dff8447b9056a2851b47a/687e004c98b7569fb3bea9e1_Logo.svg" alt="Logo" class="logo-image"></div>
                 </div>
@@ -44,7 +44,6 @@
 					  <div>
 						<a href="/Podstrona-2/" class="nav-link w-inline-block">
 						  <p class="text-simple">Podróże</p>
-						  <div class="nav-badge">3</div>
 						  <div class="nav-link-bg"></div>
 						</a>
 					  </div>
@@ -826,4 +825,4 @@
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=69048851f3c1e3c305a774b5" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
 </body>
-</html>
+
